Fix mobile browser layout shift by replacing vh with svh/dvh

--- a/css/blogs.css
+++ b/css/blogs.css
@@ -586,7 +586,7 @@ body.light-mode .popover-content img[src$=".svg"] {
 .moco-hero {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   height: 100dvh;
   overflow: hidden;
   background: #060913;
@@ -767,7 +767,7 @@ body.light-mode .popover-content img[src$=".svg"] {
   background: #060913;
 
   padding: 100px 5%;
-  min-height: 100vh;
+  min-height: 100dvh;
 
 }
 
